# Unimeth

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
configs/: default.json  distilled.json
envs/: environment-gpu.yml
scripts/: __init__.py  call_modification_frequency.py  generate_5mC_modbam_file.py  split_call_mods_file_by_5mC_motif2.py
scripts/calibration/: __init__.py  annotator.py  bed_to_bam.py
scripts/m6a/: __init__.py  bam_to_bam.py
src/unimeth/: __init__.py  cli.py  config.py  inference.py  unimeth.py  util.py
src/unimeth/extract/: bam.py  feature.py  patcher.py  processors.py  reader.py
src/unimeth/model/: data.py  model.py  module.py  util.py
tests/: test_args_config.py  test_bam_aggregation.py  test_bam_finalize.py  test_model_config.py  test_patcher.py  test_signal_paths.py  test_slow5_reader.py  test_tsv_writer_gzip.py  test_unaligned_bam.py
unimeth/: __init__.py  cli.py
unimeth/config/: __init__.py  args_config.py  model_config.py
unimeth/configs/: __init__.py  default.json  distilled.json
unimeth/data/: __init__.py  coords.py  extract.py  patcher.py  pipeline.py  sites.py
unimeth/eval/: __init__.py  metrics.py
unimeth/inference/: __init__.py  __main__.py  engine.py
unimeth/ioutils/: __init__.py
unimeth/ioutils/reader/: __init__.py  bam.py  bed.py  raw_signal.py  signal.py  slow5.py  tsv.py
unimeth/ioutils/writer/: __init__.py  bam_aggregation.py  bam_finalize.py  bam_label.py  tsv.py
unimeth/model/: __init__.py  datasets.py  loader.py  nn_modules.py  unimeth.py
unimeth/scripts/: __main__.py  evaluate.py
unimeth/scripts/calibration/: bed_to_bam.py
unimeth/scripts/m6a/: bam_to_bam.py  compare.py  predictions_to_bam.py  visualize.py
unimeth/training/: __init__.py  __main__.py  finetune_trainer.py  pretrain_trainer.py  trainer_base.py
unimeth/utils/: __init__.py  bam_tags.py  callbacks.py  common.py
