[project]
name = "unimeth"
version = "0.1.0"
authors = [{ name = "Shaokai Wang", email = "skwang@csu.edu.cn" }]
license = { text = "BSD-3-Clause-Clear license" }
description = "Unimeth - Unified DNA Methylation Detection from Nanopore Reads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3",
    "numpy>=2.0",
    "transformers>=4.40",
    "tqdm>=4.66",
    "accelerate>=1.0",
    "pysam>=0.22",
    "pod5>=0.3",
    "scikit-learn>=1.5",
    "scipy>=1.13",
]

[project.optional-dependencies]
train = [
    "wandb",
    "datasets",
    "bitsandbytes",
]
viz = [
    "matplotlib",
    "pandas",
]

[project.scripts]
unimeth = "unimeth.cli:start"
unimeth-train = "unimeth.training.__main__:main"
unimeth-infer = "unimeth.inference.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "jobs/",
    "pic/",
    "tools/",
    "wandb/",
    "dist/",
    "configs/",
    "AGENTS.md",
    "AGENTS_ENV.md",
    "config_gpu14.yaml",
    ".claude/",
    ".vscode/",
]

[tool.hatch.build.targets.wheel]
packages = ["unimeth"]

[project.urls]
"Homepage" = "https://github.com/sekeyWang/Unimeth"
"Bug Tracker" = "https://github.com/sekeyWang/Unimeth/issues"
